--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <p><strong>Location:</strong> Bangalore, Karnataka</p>
         </div>
         <form
-          action="https://formspree.io/f/mwpqejva"
+          action="https://formspree.io/f/meozjwze"
           method="POST"
           class="space-y-4"
         >
